// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render colors - value[0] 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{\\"marginBottom\\":0}}"
  id="colors"
  style={Object {}}
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}} ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="colors_input"
      title="colors"
    >
      colors
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="slider-picker {\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}"
          style={Object {}}
        >
          <div
            style={
              Object {
                "height": "12px",
                "position": "relative",
              }
            }
          >
            <div
              style={
                Object {
                  "MozBorderRadius": undefined,
                  "MozBoxShadow": undefined,
                  "OBorderRadius": undefined,
                  "OBoxShadow": undefined,
                  "WebkitBorderRadius": undefined,
                  "WebkitBoxShadow": undefined,
                  "borderRadius": undefined,
                  "bottom": "0px",
                  "boxShadow": undefined,
                  "left": "0px",
                  "msBorderRadius": undefined,
                  "msBoxShadow": undefined,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                }
              }
            >
              <div
                className="hue-horizontal"
                onMouseDown={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozBorderRadius": undefined,
                    "OBorderRadius": undefined,
                    "WebkitBorderRadius": undefined,
                    "borderRadius": undefined,
                    "height": "100%",
                    "msBorderRadius": undefined,
                    "padding": "0 2px",
                    "position": "relative",
                  }
                }
              >
                <style>
                  
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                </style>
                <div
                  style={
                    Object {
                      "left": "0%",
                      "position": "absolute",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "MozBorderRadius": "6px",
                        "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "MozTransform": "translate(-7px, -1px)",
                        "OBorderRadius": "6px",
                        "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "OTransform": "translate(-7px, -1px)",
                        "WebkitBorderRadius": "6px",
                        "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "WebkitTransform": "translate(-7px, -1px)",
                        "backgroundColor": "rgb(248, 248, 248)",
                        "borderRadius": "6px",
                        "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "height": "14px",
                        "msBorderRadius": "6px",
                        "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "msTransform": "translate(-7px, -1px)",
                        "transform": "translate(-7px, -1px)",
                        "width": "14px",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style={
                Object {
                  "marginTop": "20px",
                }
              }
            >
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "2px 0 0 2px",
                      "OBorderRadius": "2px 0 0 2px",
                      "WebkitBorderRadius": "2px 0 0 2px",
                      "background": "hsl(0, 50%, 80%)",
                      "borderRadius": "2px 0 0 2px",
                      "cursor": "pointer",
                      "height": "12px",
                      "msBorderRadius": "2px 0 0 2px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 65%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 50%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 35%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "0 2px 2px 0",
                      "OBorderRadius": "0 2px 2px 0",
                      "WebkitBorderRadius": "0 2px 2px 0",
                      "background": "hsl(0, 50%, 20%)",
                      "borderRadius": "0 2px 2px 0",
                      "cursor": "pointer",
                      "height": "12px",
                      "msBorderRadius": "0 2px 2px 0",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "clear": "both",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render default - value[0] 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{\\"marginBottom\\":0}}"
  id="default"
  style={Object {}}
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}} ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="default_input"
      title="default"
    >
      default
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="slider-picker {\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}"
          style={Object {}}
        >
          <div
            style={
              Object {
                "height": "12px",
                "position": "relative",
              }
            }
          >
            <div
              style={
                Object {
                  "MozBorderRadius": undefined,
                  "MozBoxShadow": undefined,
                  "OBorderRadius": undefined,
                  "OBoxShadow": undefined,
                  "WebkitBorderRadius": undefined,
                  "WebkitBoxShadow": undefined,
                  "borderRadius": undefined,
                  "bottom": "0px",
                  "boxShadow": undefined,
                  "left": "0px",
                  "msBorderRadius": undefined,
                  "msBoxShadow": undefined,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                }
              }
            >
              <div
                className="hue-horizontal"
                onMouseDown={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozBorderRadius": undefined,
                    "OBorderRadius": undefined,
                    "WebkitBorderRadius": undefined,
                    "borderRadius": undefined,
                    "height": "100%",
                    "msBorderRadius": undefined,
                    "padding": "0 2px",
                    "position": "relative",
                  }
                }
              >
                <style>
                  
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                </style>
                <div
                  style={
                    Object {
                      "left": "0%",
                      "position": "absolute",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "MozBorderRadius": "6px",
                        "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "MozTransform": "translate(-7px, -1px)",
                        "OBorderRadius": "6px",
                        "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "OTransform": "translate(-7px, -1px)",
                        "WebkitBorderRadius": "6px",
                        "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "WebkitTransform": "translate(-7px, -1px)",
                        "backgroundColor": "rgb(248, 248, 248)",
                        "borderRadius": "6px",
                        "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "height": "14px",
                        "msBorderRadius": "6px",
                        "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "msTransform": "translate(-7px, -1px)",
                        "transform": "translate(-7px, -1px)",
                        "width": "14px",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style={
                Object {
                  "marginTop": "20px",
                }
              }
            >
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "2px 0 0 2px",
                      "OBorderRadius": "2px 0 0 2px",
                      "WebkitBorderRadius": "2px 0 0 2px",
                      "background": "hsl(0, 50%, 80%)",
                      "borderRadius": "2px 0 0 2px",
                      "cursor": "pointer",
                      "height": "12px",
                      "msBorderRadius": "2px 0 0 2px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 65%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 50%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 35%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "0 2px 2px 0",
                      "OBorderRadius": "0 2px 2px 0",
                      "WebkitBorderRadius": "0 2px 2px 0",
                      "background": "hsl(0, 50%, 20%)",
                      "borderRadius": "0 2px 2px 0",
                      "cursor": "pointer",
                      "height": "12px",
                      "msBorderRadius": "0 2px 2px 0",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "clear": "both",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render defaultColor - value[0] 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{\\"marginBottom\\":0}}"
  id="defaultColor"
  style={Object {}}
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}} ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="defaultColor_input"
      title="defaultColor"
    >
      defaultColor
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="slider-picker {\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}"
          style={Object {}}
        >
          <div
            style={
              Object {
                "height": "12px",
                "position": "relative",
              }
            }
          >
            <div
              style={
                Object {
                  "MozBorderRadius": undefined,
                  "MozBoxShadow": undefined,
                  "OBorderRadius": undefined,
                  "OBoxShadow": undefined,
                  "WebkitBorderRadius": undefined,
                  "WebkitBoxShadow": undefined,
                  "borderRadius": undefined,
                  "bottom": "0px",
                  "boxShadow": undefined,
                  "left": "0px",
                  "msBorderRadius": undefined,
                  "msBoxShadow": undefined,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                }
              }
            >
              <div
                className="hue-horizontal"
                onMouseDown={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozBorderRadius": undefined,
                    "OBorderRadius": undefined,
                    "WebkitBorderRadius": undefined,
                    "borderRadius": undefined,
                    "height": "100%",
                    "msBorderRadius": undefined,
                    "padding": "0 2px",
                    "position": "relative",
                  }
                }
              >
                <style>
                  
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                </style>
                <div
                  style={
                    Object {
                      "left": "32.22222222222223%",
                      "position": "absolute",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "MozBorderRadius": "6px",
                        "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "MozTransform": "translate(-7px, -1px)",
                        "OBorderRadius": "6px",
                        "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "OTransform": "translate(-7px, -1px)",
                        "WebkitBorderRadius": "6px",
                        "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "WebkitTransform": "translate(-7px, -1px)",
                        "backgroundColor": "rgb(248, 248, 248)",
                        "borderRadius": "6px",
                        "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "height": "14px",
                        "msBorderRadius": "6px",
                        "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "msTransform": "translate(-7px, -1px)",
                        "transform": "translate(-7px, -1px)",
                        "width": "14px",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style={
                Object {
                  "marginTop": "20px",
                }
              }
            >
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "2px 0 0 2px",
                      "OBorderRadius": "2px 0 0 2px",
                      "WebkitBorderRadius": "2px 0 0 2px",
                      "background": "hsl(116.00000000000001, 50%, 80%)",
                      "borderRadius": "2px 0 0 2px",
                      "cursor": "pointer",
                      "height": "12px",
                      "msBorderRadius": "2px 0 0 2px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(116.00000000000001, 50%, 65%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(116.00000000000001, 50%, 50%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(116.00000000000001, 50%, 35%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "0 2px 2px 0",
                      "OBorderRadius": "0 2px 2px 0",
                      "WebkitBorderRadius": "0 2px 2px 0",
                      "background": "hsl(116.00000000000001, 50%, 20%)",
                      "borderRadius": "0 2px 2px 0",
                      "cursor": "pointer",
                      "height": "12px",
                      "msBorderRadius": "0 2px 2px 0",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "clear": "both",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render inputStyle - value[0] 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{\\"marginBottom\\":0}}"
  id="inputStyle"
  style={Object {}}
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}} ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="inputStyle_input"
      title="inputStyle"
    >
      inputStyle
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="slider-picker {\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},{\\"border\\":\\"3px solid blue\\"}]}"
          style={Object {}}
        >
          <div
            style={
              Object {
                "height": "12px",
                "position": "relative",
              }
            }
          >
            <div
              style={
                Object {
                  "MozBorderRadius": undefined,
                  "MozBoxShadow": undefined,
                  "OBorderRadius": undefined,
                  "OBoxShadow": undefined,
                  "WebkitBorderRadius": undefined,
                  "WebkitBoxShadow": undefined,
                  "borderRadius": undefined,
                  "bottom": "0px",
                  "boxShadow": undefined,
                  "left": "0px",
                  "msBorderRadius": undefined,
                  "msBoxShadow": undefined,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                }
              }
            >
              <div
                className="hue-horizontal"
                onMouseDown={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozBorderRadius": undefined,
                    "OBorderRadius": undefined,
                    "WebkitBorderRadius": undefined,
                    "borderRadius": undefined,
                    "height": "100%",
                    "msBorderRadius": undefined,
                    "padding": "0 2px",
                    "position": "relative",
                  }
                }
              >
                <style>
                  
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                </style>
                <div
                  style={
                    Object {
                      "left": "0%",
                      "position": "absolute",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "MozBorderRadius": "6px",
                        "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "MozTransform": "translate(-7px, -1px)",
                        "OBorderRadius": "6px",
                        "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "OTransform": "translate(-7px, -1px)",
                        "WebkitBorderRadius": "6px",
                        "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "WebkitTransform": "translate(-7px, -1px)",
                        "backgroundColor": "rgb(248, 248, 248)",
                        "borderRadius": "6px",
                        "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "height": "14px",
                        "msBorderRadius": "6px",
                        "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "msTransform": "translate(-7px, -1px)",
                        "transform": "translate(-7px, -1px)",
                        "width": "14px",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style={
                Object {
                  "marginTop": "20px",
                }
              }
            >
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "2px 0 0 2px",
                      "OBorderRadius": "2px 0 0 2px",
                      "WebkitBorderRadius": "2px 0 0 2px",
                      "background": "hsl(0, 50%, 80%)",
                      "borderRadius": "2px 0 0 2px",
                      "cursor": "pointer",
                      "height": "12px",
                      "msBorderRadius": "2px 0 0 2px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 65%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 50%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 35%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "0 2px 2px 0",
                      "OBorderRadius": "0 2px 2px 0",
                      "WebkitBorderRadius": "0 2px 2px 0",
                      "background": "hsl(0, 50%, 20%)",
                      "borderRadius": "0 2px 2px 0",
                      "cursor": "pointer",
                      "height": "12px",
                      "msBorderRadius": "0 2px 2px 0",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "clear": "both",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render label-disabled - value[0] 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{\\"marginBottom\\":0}}"
  id="label-disabled"
  style={Object {}}
>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="slider-picker {\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}"
          style={Object {}}
        >
          <div
            style={
              Object {
                "height": "12px",
                "position": "relative",
              }
            }
          >
            <div
              style={
                Object {
                  "MozBorderRadius": undefined,
                  "MozBoxShadow": undefined,
                  "OBorderRadius": undefined,
                  "OBoxShadow": undefined,
                  "WebkitBorderRadius": undefined,
                  "WebkitBoxShadow": undefined,
                  "borderRadius": undefined,
                  "bottom": "0px",
                  "boxShadow": undefined,
                  "left": "0px",
                  "msBorderRadius": undefined,
                  "msBoxShadow": undefined,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                }
              }
            >
              <div
                className="hue-horizontal"
                onMouseDown={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozBorderRadius": undefined,
                    "OBorderRadius": undefined,
                    "WebkitBorderRadius": undefined,
                    "borderRadius": undefined,
                    "height": "100%",
                    "msBorderRadius": undefined,
                    "padding": "0 2px",
                    "position": "relative",
                  }
                }
              >
                <style>
                  
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                </style>
                <div
                  style={
                    Object {
                      "left": "0%",
                      "position": "absolute",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "MozBorderRadius": "6px",
                        "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "MozTransform": "translate(-7px, -1px)",
                        "OBorderRadius": "6px",
                        "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "OTransform": "translate(-7px, -1px)",
                        "WebkitBorderRadius": "6px",
                        "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "WebkitTransform": "translate(-7px, -1px)",
                        "backgroundColor": "rgb(248, 248, 248)",
                        "borderRadius": "6px",
                        "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "height": "14px",
                        "msBorderRadius": "6px",
                        "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "msTransform": "translate(-7px, -1px)",
                        "transform": "translate(-7px, -1px)",
                        "width": "14px",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style={
                Object {
                  "marginTop": "20px",
                }
              }
            >
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "2px 0 0 2px",
                      "OBorderRadius": "2px 0 0 2px",
                      "WebkitBorderRadius": "2px 0 0 2px",
                      "background": "hsl(0, 50%, 80%)",
                      "borderRadius": "2px 0 0 2px",
                      "cursor": "pointer",
                      "height": "12px",
                      "msBorderRadius": "2px 0 0 2px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 65%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 50%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 35%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "0 2px 2px 0",
                      "OBorderRadius": "0 2px 2px 0",
                      "WebkitBorderRadius": "0 2px 2px 0",
                      "background": "hsl(0, 50%, 20%)",
                      "borderRadius": "0 2px 2px 0",
                      "cursor": "pointer",
                      "height": "12px",
                      "msBorderRadius": "0 2px 2px 0",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "clear": "both",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render title - value[0] 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{\\"marginBottom\\":0}}"
  id="title"
  style={Object {}}
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left {\\"style\\":{\\"overflow\\":\\"visible\\",\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8}} ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="title_input"
      title="The color selector"
    >
      The color selector
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="slider-picker {\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}"
          style={Object {}}
        >
          <div
            style={
              Object {
                "height": "12px",
                "position": "relative",
              }
            }
          >
            <div
              style={
                Object {
                  "MozBorderRadius": undefined,
                  "MozBoxShadow": undefined,
                  "OBorderRadius": undefined,
                  "OBoxShadow": undefined,
                  "WebkitBorderRadius": undefined,
                  "WebkitBoxShadow": undefined,
                  "borderRadius": undefined,
                  "bottom": "0px",
                  "boxShadow": undefined,
                  "left": "0px",
                  "msBorderRadius": undefined,
                  "msBoxShadow": undefined,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                }
              }
            >
              <div
                className="hue-horizontal"
                onMouseDown={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozBorderRadius": undefined,
                    "OBorderRadius": undefined,
                    "WebkitBorderRadius": undefined,
                    "borderRadius": undefined,
                    "height": "100%",
                    "msBorderRadius": undefined,
                    "padding": "0 2px",
                    "position": "relative",
                  }
                }
              >
                <style>
                  
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                </style>
                <div
                  style={
                    Object {
                      "left": "0%",
                      "position": "absolute",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "MozBorderRadius": "6px",
                        "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "MozTransform": "translate(-7px, -1px)",
                        "OBorderRadius": "6px",
                        "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "OTransform": "translate(-7px, -1px)",
                        "WebkitBorderRadius": "6px",
                        "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "WebkitTransform": "translate(-7px, -1px)",
                        "backgroundColor": "rgb(248, 248, 248)",
                        "borderRadius": "6px",
                        "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "height": "14px",
                        "msBorderRadius": "6px",
                        "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                        "msTransform": "translate(-7px, -1px)",
                        "transform": "translate(-7px, -1px)",
                        "width": "14px",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style={
                Object {
                  "marginTop": "20px",
                }
              }
            >
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "2px 0 0 2px",
                      "OBorderRadius": "2px 0 0 2px",
                      "WebkitBorderRadius": "2px 0 0 2px",
                      "background": "hsl(0, 50%, 80%)",
                      "borderRadius": "2px 0 0 2px",
                      "cursor": "pointer",
                      "height": "12px",
                      "msBorderRadius": "2px 0 0 2px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 65%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 50%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "hsl(0, 50%, 35%)",
                      "cursor": "pointer",
                      "height": "12px",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "float": "left",
                    "paddingRight": "1px",
                    "width": "20%",
                  }
                }
              >
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "0 2px 2px 0",
                      "OBorderRadius": "0 2px 2px 0",
                      "WebkitBorderRadius": "0 2px 2px 0",
                      "background": "hsl(0, 50%, 20%)",
                      "borderRadius": "0 2px 2px 0",
                      "cursor": "pointer",
                      "height": "12px",
                      "msBorderRadius": "0 2px 2px 0",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "clear": "both",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Schema colors 1`] = `true`;

exports[`Test Schema colors 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema defaultColor 1`] = `true`;

exports[`Test Schema defaultColor 2`] = `null`;

exports[`Test Schema inputStyle 1`] = `true`;

exports[`Test Schema inputStyle 2`] = `null`;

exports[`Test Schema label-disabled 1`] = `true`;

exports[`Test Schema label-disabled 2`] = `null`;

exports[`Test Schema title 1`] = `true`;

exports[`Test Schema title 2`] = `null`;
